# yanex

./: .coverage  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  build_web_ui.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: README.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  claude-code-review.yml  feature-branch.yml  release.yml
docs/: README.md  ai-usage.md  best-practices.md  cli-commands.md  configuration.md  dependencies.md  experiment-structure.md  python-api.md  results-api.md  run-api.md
docs/commands/: archive.md  compare.md  delete.md  get.md  id.md  list.md  open.md  run.md  show.md  ui.md  unarchive.md  update.md
examples/: api_usage.py  basic_exp.py  basic_usage.py  config.yaml  demo_config.yaml  demo_dual_mode.py  manual_control.py  matplotlib_example.py  my_script.py  results-api.ipynb  test_parameters.py
examples/api/: api_usage.py  batch_execution.py  kfold_training.py  manual_control.py  matplotlib_example.py  notebook_example.ipynb
examples/cli/: README.md  advanced_benchmark.py  bash_script_example.py  basic_benchmark.py  config.yaml  demo_linkbench.sh  pass_script_args.py  script_args.py
examples/cli/01_basic_usage/: README.md  compute.py
examples/cli/02_config_files/: README.md  train-config.yaml  train.py
examples/cli/03_logging_artifacts/: README.md  analyze.py
examples/cli/04_metadata_and_tags/: README.md  scrape.py  scraper-config.yaml
examples/cli/05_multi_step_metrics/: README.md
examples/cli/05_parameter_sweeps/: README.md  config.yaml
examples/cli/06_bash_integration/: README.md  linkbench.sh  run_benchmark.py
examples/cli/07_parameter_sweeps/: README.md  sweep-config.yaml  test_algorithm.py
examples/results-api/: 01_reading_experiments.ipynb  02_filtering_comparing.ipynb  03_metrics_visualization.ipynb  04_experiment_graphs.ipynb  README.md
examples/run-api/: README.md
planning/: api_cleanup_implementation.md  architecture.md  artifacts-api-changes.md  cli_implementation_plan.md  compare_command_design.md  config-cli-defaults.md  current_status.md  custom-artifact-handlers.md  dependencies-prompt.md  dependency-tracking-design.md  design_spec.md  direct-sweep-execution.md  experiment-dependencies-addendum.md  experiment-dependencies.md  experiment_manager_implementation.md  parallel-execution.md  parameter-tracking.md  parameter_sweeps_design.md  programmatic-multi-experiment-execution.md  refactor_plan.md  remove-ignore-dirty-flag.md  results_api_implementation_plan.md  script-name-display-and-filtering.md  spa-mode-implementation.md  testing-coverage-plan.md  visualization_design.md  visualization_design_pandas.md  visualization_examples.md
tests/: UTILITIES_SUMMARY.md  __init__.py  conftest.py  test_api.py  test_api_artifacts.py  test_api_dependencies.py  test_api_graph.py  test_api_standalone.py  test_experiment.py  test_experiment_standalone.py  test_utilities_demo.py  test_utils.py  test_web_api.py
tests/api/: __init__.py  test_batch_execution.py  test_param_conflict.py
tests/cli/: __init__.py  test_archive_commands.py  test_clone_from.py  test_compare.py  test_dependency_parsing.py  test_dependency_sweeps.py  test_direct_sweep_execution.py  test_error_handling.py  test_filters.py  test_main.py  test_migrate.py  test_open.py  test_parallel_execution.py  test_parameter_sweeps.py  test_pull.py  test_push.py  test_run_error_handling.py  test_script_args.py  test_show.py  test_sweep_naming.py  test_update_command.py
tests/core/: __init__.py  test_access_resolver.py  test_artifact_formats.py  test_circular_dependency_detector.py  test_comparison.py  test_config.py  test_constants.py  test_custom_artifact_handlers.py  test_dependencies.py  test_dependencies_edge_cases.py  test_dependency_graph.py  test_dependency_validator.py  test_environment.py  test_filtering.py  test_git_utils.py  test_manager.py  test_migrations.py  test_param_tracking.py  test_param_tracking_integration.py  test_parameter_sweeps.py  test_project.py  test_script_executor.py  test_storage.py  test_storage_dependencies.py  test_tracked_dict.py  test_unified_filtering.py
tests/results/: __init__.py  test_dataframe.py  test_experiment.py  test_experiment_artifacts.py  test_graph.py  test_integration.py  test_manager.py  test_plotting.py
tests/sync/: test_filter_utils.py  test_remote_metadata.py  test_target.py  test_transport.py
tests/utils/: __init__.py  test_datetime_utils.py  test_dict_utils.py  test_exceptions.py  test_validation.py
yanex/: __init__.py  __main__.py  api.py  cli.py  core.py  executor.py  experiment.py  utils.py
yanex/claude-skill/: SKILL.md  cli-quick-reference.md  experiment-logging-format.md  results-api-patterns.md
yanex/cli/: __init__.py  _utils.py  error_handling.py  main.py
yanex/core/: __init__.py  access_resolver.py  artifact_formats.py  artifact_io.py  circular_dependency_detector.py  comparison.py  config.py  constants.py  dependencies.py  dependency_graph.py  dependency_validator.py  environment.py  filtering.py  git_utils.py  manager.py  migrations.py  param_tracking.py  parameter_parser_factory.py  parameter_parsers.py  project.py  script_executor.py  storage.py  storage_archive.py  storage_artifacts.py  storage_composition.py  storage_config.py  storage_dependencies.py  storage_directory.py  storage_executions.py  storage_interfaces.py  storage_metadata.py  storage_metrics.py  storage_results.py  tracked_dict.py
yanex/results/: __init__.py  dataframe.py  experiment.py  graph.py  manager.py  plotting.py
yanex/sync/: __init__.py  filter_utils.py  remote_metadata.py  target.py  transport.py
yanex/ui/: __init__.py  compare_table.py
yanex/utils/: __init__.py  datetime_utils.py  dict_utils.py  exceptions.py  id_resolution.py  validation.py
yanex/web/: .gitignore  README.md  __init__.py  api.py  app.py  build.sh  dev.py  index.html  next.config.js  package-lock.json  package.json  quick-start.sh  setup.sh
(+99 files in other folders)
